src/resources/jamtaba.css
/* ... */
/*+++++++++++++++++++++++++++++++*/

/*  Track view +++++++++++++++++++++++++++++++++++++++++++++++ */
BaseTrackView{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 rgb(200, 200, 200),
        stop:0.01 rgb(240, 240, 240),
        stop:1 rgb(110, 110, 110)
    );
   border: 1px solid rgb(61,61,61);
   border-radius: 0px;
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
   font-size: 8px; /*db value */
}

BaseTrackView[unlighted="true"] > QFrame#topSeparator, BaseTrackView[unlighted="true"] > QFrame#panSectionSeparator{
    background-color: rgba(0, 0, 0, 5);
}

BaseTrackView[unlighted="true"]{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 rgb(150, 150, 150),
        stop:1 rgb(90, 90, 90));
}


QPushButton{
    border-radius: 2px;
    border: 1px outset gray;
    padding: 3px 6px 3px 6px;
    font-size: 11px;
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 white,
        stop:0.2 rgba(255, 255, 255, 180),
        stop:0.85 rgba(255, 255, 255, 180),
        stop:1 rgba(255,255, 255, 40));
    color: rgb(60, 60, 60);
}

QPushButton:checked{
    border-style: inset;
    background-color: rgba(0, 0, 0, 70);
    color: rgb(0,0,0);
}

QPushButton:hover{
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
    stop:0 rgb(240, 240, 240),
    stop:0.2 rgb(255, 255, 255),
    stop:0.7 rgb(240, 240, 240),
    stop:1 rgb(210,210, 210)
    );
    color: black;
}

QPushButton[enabled="false"]{
    background: none;
    color: rgba(0, 0, 0, 30);
    border-color: rgba(0, 0, 0, 40);
}

QPushButton#soloButton, QPushButton#muteButton, QPushButton#preferencesButton{
    font-size: 9px;
    border-color: rgb(110,110,110);
    padding: 2px;
    padding-left: 3px;
    padding-right: 3px;
    color: rgb(50,50,50);
}

NinjamTrackView #soloButton, NinjamTrackView #muteButton{
   border-color: rgb(95,95,95);
   color: rgb(40,40,40);
}

NinjamTrackView[horizontal="true"] #soloButton,
NinjamTrackView[horizontal="true"] #muteButton{
    padding-top: 0px;
    padding-bottom: 0px;
}

NinjamTrackView QProgressBar{ /* chunks display */
    background-color: rgba(255, 255, 255, 20);
    border-radius: 2px;
    border: none;
    min-height: 2px;
    max-height: 3px;
}

QPushButton:hover#soloButton, QPushButton:hover#muteButton{
/*background-color: rgba(255, 255, 255, 80);*/
color: rgba(0, 0, 0, 200);
}

QPushButton:checked#soloButton{
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(90, 255, 62), stop:1 rgb(0, 175, 0));
color: black;
}

QPushButton:hover:checked#soloButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(110, 255, 82), stop:1 rgb(30, 195, 30));
color: gray;
}

QPushButton:checked#muteButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 90, 62), stop:1 rgb(175, 0, 0));
color: lightgray;
}

QPushButton:hover:checked#muteButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 110, 122), stop:1 rgb(120, 0, 0));
color: white;
}

/* TRACK GROUPs */

TrackGroupView {
    border: none;
    background-color: none;
    border-radius: 2px;
}

TrackGroupView > #topPanel{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
    stop:0 rgb(245, 245, 245),
    stop:0.06 rgb(240, 240, 240),
    stop:1 rgb(180, 180, 180));
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
}

NinjamTrackGroupView[horizontal="true"] #topPanel{
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}

TrackGroupView[unlighted="true"] > #topPanel  {
   background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(180, 180, 180), stop:1 rgb(70, 70, 70));
}

TrackGroupView #groupNameField {
    margin-bottom: 0px;
    margin-top: 0px;
    font-size: 11px;
    font-weight: normal;
}


/* LOCAL TRACK GROUP */
LocalTrackGroupView{
    border: none;
}

LocalTrackGroupView[highlighted="true"] {
    border: 1px solid white;

}

LocalTrackGroupView  #toolButton {
    background-color: none;
    background-image: url(':/images/gear.png');
    background-repeat: none;
    background-position: center center;
    border: none;
    padding: 0px;
    margin: 0px;
    width: 14px;
    height: 14px;
}

LocalTrackGroupView   #toolButton:hover{
    background-image: url(':/images/gear-hover.png');
}
/* ++++++++++++++++++++++++++++++++++ */

QLabel#labelPanR, QLabel#labelPanL{
    color: rgba(0, 0, 0, 160);
    font-size: 9px;
}

BaseTrackView > .QFrame#topSeparator{
background-color: rgb(210, 210, 210);
}

BaseTrackView > .QFrame#panSectionSeparator{
background-color: rgb(180, 180, 180);
}

/*+++++++++++++++++++++++++++++++++++++++++++++++*/
LocalTrackView, NinjamTrackView{
    border: none;
}

LocalTrackView[peakMetersOnly="true"]{
    background: none;

}

LocalTrackView[highlighted="true"]{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(230, 230, 230), stop:1 rgb(140, 140, 140));
}

LocalTrackView #inputPanel{
    padding: 2px;
    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1,
    stop:0 rgba(0, 0, 0, 60),
    stop:1 rgba(0, 0, 0, 90));
    border-radius: 2px;
    border: none;
}

LocalTrackView #midiToolsButton{
    font-size: 10px;
}

BaseTrackView[unlighted="false"] #inputPanel{
    border: 1px outset rgb(80,80,80);
}

LocalTrackView #inputPanel:hover{
    background-color: qlineargradient(x1:0, y1:0.4, x2:0, y2:1, stop:0 rgba(0, 0, 0, 20), stop:1 rgba(0, 0, 0, 40));
}

LocalTrackView #inputSelectionIcon{
    border: none;
    margin: 0px;
    padding: 0px;
    max-width: 22px;
    min-width: 22px;
    min-height: 22px;
    background-position: center;
    background-repeat: none;
}
/* ... */

